[package]
name = "tx-pigeon"
version = "0.1.0"
edition = "2024"
default-run = "tx-pigeon"

[dependencies]
anyhow = "1.0.98"
bitcoin = { version = "0.32.5", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
clap = { version = "4.5.38", features = ["derive"] }
hex = "0.4"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
rand = "0.9.1"
arti-client = { version = "0.30", features = ["onion-service-client"] }
tor-rtcompat = { version = "0.30", features = ["tokio"] }
data-encoding = "2.9.0"
sha3 = "0.10.8"
